# asty-python

./: README.md  main.py  pyproject.toml  run_examples.sh
asty/: features.py  nodes.py  utils.py  visitors.py
examples/advanced_match/: README.md  main.py  pattern.json  sample.go
examples/simple_match/: README.md  main.py
examples/simple_transform/: README.md  main.py
