[tool.poetry]
name = "asty-python"
version = "0.1.0"
description = ""
authors = ["Eugene Chernyshov <chernyshov.eugene@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
