[tool.poetry]
name = "asty"
version = "0.1.0"
description = ""
authors = ["Eugene Chernyshov <chernyshov.eugene@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.6"

[tool.poetry.dev-dependencies]
devtools = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
